--- a/04_ML_Logistic.ipynb
+++ b/04_ML_Logistic.ipynb
@@ -941,11 +941,11 @@
       "metadata": {
         "id": "5LmqnYkEKxEa",
         "collapsed": true,
-        "outputId": "0829ec6e-ffac-4bfc-d8cc-df2379cd7aa4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 970
-        }
+          "height": 0
+        },
+        "outputId": "0829ec6e-ffac-4bfc-d8cc-df2379cd7aa4"
       },
       "execution_count": 36,
       "outputs": [
@@ -1011,10 +1011,10 @@
       ],
       "metadata": {
         "id": "cLVyrAr0OcQl",
-        "outputId": "73d0216a-03fb-4a63-8d71-842375c71baa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "73d0216a-03fb-4a63-8d71-842375c71baa"
       },
       "execution_count": 73,
       "outputs": [
@@ -1103,11 +1103,11 @@
       "metadata": {
         "id": "OAdfL0-FTswN",
         "collapsed": true,
-        "outputId": "ab967e18-c7f3-457f-9515-6c3110cbfb0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+          "height": 0
+        },
+        "outputId": "ab967e18-c7f3-457f-9515-6c3110cbfb0c"
       },
       "execution_count": 79,
       "outputs": [
@@ -1216,11 +1216,11 @@
       "metadata": {
         "id": "HPo81rdcVjuH",
         "collapsed": true,
-        "outputId": "292907c5-12f8-4354-9f7d-1544397a6d34",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+          "height": 0
+        },
+        "outputId": "292907c5-12f8-4354-9f7d-1544397a6d34"
       },
       "execution_count": 80,
       "outputs": [
@@ -1343,11 +1343,11 @@
       "metadata": {
         "id": "4vZn7QQeXyNc",
         "collapsed": true,
-        "outputId": "1bfa5a4c-6500-4c52-ac93-b9456fa64243",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "1bfa5a4c-6500-4c52-ac93-b9456fa64243"
       },
       "execution_count": 94,
       "outputs": [
@@ -1558,11 +1558,11 @@
       "metadata": {
         "id": "axf_lxj2Ydjd",
         "collapsed": true,
-        "outputId": "e6e81e43-0e73-473c-ebce-b326c6a6f61d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "e6e81e43-0e73-473c-ebce-b326c6a6f61d"
       },
       "execution_count": 95,
       "outputs": [
@@ -1771,12 +1771,12 @@
         "print('-------------------------------------------------------')"
       ],
       "metadata": {
-        "id": "o0j0JAKAcrIC",
-        "outputId": "3b3f16b8-ee48-4e53-e0d9-e898423de1c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "o0j0JAKAcrIC",
+        "outputId": "3b3f16b8-ee48-4e53-e0d9-e898423de1c3"
       },
       "execution_count": 96,
       "outputs": [
@@ -1987,11 +1987,11 @@
       "metadata": {
         "id": "5VHdZWYgYoQo",
         "collapsed": true,
-        "outputId": "50df591a-dbb2-44e5-833f-93a00592620f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "50df591a-dbb2-44e5-833f-93a00592620f"
       },
       "execution_count": 97,
       "outputs": [
@@ -2202,11 +2202,11 @@
       "metadata": {
         "id": "GKyqU62SY5hw",
         "collapsed": true,
-        "outputId": "e000f2d4-8d1f-466d-bf18-c1786cae0a9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "e000f2d4-8d1f-466d-bf18-c1786cae0a9c"
       },
       "execution_count": 98,
       "outputs": [
@@ -2417,11 +2417,11 @@
       "metadata": {
         "id": "YtO_pfFoY9Be",
         "collapsed": true,
-        "outputId": "723ba886-e446-4a2b-a8bf-eb5ca3c2e626",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "723ba886-e446-4a2b-a8bf-eb5ca3c2e626"
       },
       "execution_count": 99,
       "outputs": [
@@ -2632,11 +2632,11 @@
       "metadata": {
         "id": "KfXK13EcZDKM",
         "collapsed": true,
-        "outputId": "38cdfb17-6edc-423d-e33c-58e5a560eaf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "38cdfb17-6edc-423d-e33c-58e5a560eaf2"
       },
       "execution_count": 100,
       "outputs": [
@@ -2847,10 +2847,10 @@
       ],
       "metadata": {
         "id": "zdQ9b7_sZF9h",
-        "outputId": "046f6128-e6f9-4b0d-98e5-65f853effdb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "046f6128-e6f9-4b0d-98e5-65f853effdb0"
       },
       "execution_count": 101,
       "outputs": [
@@ -2869,6 +2869,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The experimental results show that the learning rate α has a direct influence on how gradient descent behaves during training. When α is set to a very small value (0.0001), the updates to the weights are minimal, so the algorithm makes slow progress towards the minimum of the loss function. In this case, the model does not fully converge within the fixed number of iterations, which leads to weaker performance and lower accuracy.\n",
+        "\n",
+        "As the learning rate increases to moderate values, the algorithm moves more efficiently along the gradient. These settings allow the model to reach a good solution within the allotted iterations, and this is reflected in the higher accuracies and more reasonable weight magnitudes. This range of α provides a balance between speed and stability.\n",
+        "\n",
+        "When the learning rate becomes too large, the behaviour changes noticeably. The weight values grow rapidly, which suggests that the updates jump past the minimum rather than moving towards it. This “overshooting” effect makes the optimisation process unstable. Although the accuracy does not collapse immediately, the results become less dependable and the weight values indicate that the algorithm is no longer following a smooth convergence path."
+      ],
+      "metadata": {
+        "id": "h0i73x1FqGrj"
+      }
     },
     {
       "cell_type": "code",
