--- a/07_ML_kNN.ipynb
+++ b/07_ML_kNN.ipynb
@@ -858,6 +858,9 @@
         "    sk_accuracy_list_mink.append(acc_mink)\n",
         "\n",
         "# Summary table\n",
+        "print(\"Accuracy Comparison Between Task 1 and Scikit-Learn\")\n",
+        "print(\"=\" * 110)\n",
+        "\n",
         "print(\"k | Task1_Euclidean | SK_Euclidean | Task1_Manhattan | SK_Manhattan | Task1_Minkowski | SK_Minkowski\")\n",
         "print(\"-\" * 110)\n",
         "\n",
@@ -875,15 +878,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0eaaccd5-6d9c-40b6-d29a-68622ea167b2"
+        "outputId": "7b9c69ad-a525-40c0-c373-98adf534e2c6"
       },
       "id": "PErxbuqS1Dxq",
-      "execution_count": 36,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Accuracy Comparison Between Task 1 and Scikit-Learn\n",
+            "==============================================================================================================\n",
             "k | Task1_Euclidean | SK_Euclidean | Task1_Manhattan | SK_Manhattan | Task1_Minkowski | SK_Minkowski\n",
             "--------------------------------------------------------------------------------------------------------------\n",
             "1  | 0.933            | 0.933          | 0.933            | 0.933         | 0.933            | 0.933        \n",
@@ -907,7 +912,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "From the comparison table, most of the accuracy values from the example manual KNN implementation and the scikit-learn version were almost identical across Euclidean, Manhattan, and Minkowski distances and for most k values. This shows that the example implementation was generally correct and behaved similarly to the official library version. The only noticeable difference happened at a few specific k values, such as Manhattan distance at k=17, where the example method gave an accuracy of 1.000 while scikit-learn gave 0.967. This behavior is expected because the two methods handle things like tie-breaking, ordering of neighbours, and floating-point rounding slightly differently. Since even one prediction changing can affect the accuracy, small differences like would be normal.\n",
+        "\n",
+        "Overall, the results show that all three distance measures perform very similarly on this dataset, and scikit-learn matches the behaviour of the manual KNN, with only minor deviations at specific k values."
+      ],
       "metadata": {
         "id": "MZYXWkta5_wU"
       },
