--- a/02_ML_LR.ipynb
+++ b/02_ML_LR.ipynb
@@ -36,7 +36,7 @@
       "metadata": {
         "id": "gWR1Ec9vSCHc"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -53,10 +53,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yhYsbiPqSFWm",
-        "outputId": "7961a9ee-6681-4570-aea7-7cab62e6777f",
+        "outputId": "c78ab7f4-f54a-44f7-946d-138dcf3872b1",
         "collapsed": true
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,9 +116,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XHlYJK7DSJ0w",
-        "outputId": "ae75df2c-def1-4a11-d8c5-4e926b38e273"
+        "outputId": "c37cdf86-c4a2-4162-ff28-815471a76884"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -174,13 +174,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 650
+          "height": 421
         },
         "id": "Ef9VDjBYSaTu",
-        "outputId": "1dc83612-7117-455d-9338-2bfdd2be8544",
+        "outputId": "0c07621e-b8e8-40fd-9acf-e5fdc33b53e4",
         "collapsed": true
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "PVRUglseUnZ5"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "OD1gPNG4Uv6n"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
       "metadata": {
         "id": "8QM_WElzU61B"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "uswkL_EzVAfq"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -293,7 +293,7 @@
       "metadata": {
         "id": "PkNLChAmVGHT"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -311,10 +311,10 @@
           "height": 1000
         },
         "id": "Li2330prVJni",
-        "outputId": "9ca6ed69-9cf0-4fa2-d0d6-1b8e6ab73dc9",
+        "outputId": "852cc548-7656-4ac3-8fa4-58ca5628e783",
         "collapsed": true
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1352,7 +1352,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -1398,9 +1398,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "e3f447aa-ba93-47bf-dedf-01a2a983b390"
+        "outputId": "43d74c5d-3500-4d00-fb1c-aaaa0ce0ec6d"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1480,9 +1480,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e6bd757-fabe-458a-cbd1-914df07e40f5"
+        "outputId": "6e2d653c-e6c8-4307-a132-b83d903238cf"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1544,7 +1544,7 @@
       "metadata": {
         "id": "dLV-MAJS6LHs"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1566,7 +1566,7 @@
       "metadata": {
         "id": "ih9XILExAQIw"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1593,9 +1593,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "179e0adf-d25e-404d-c220-9008a6b927dd"
+        "outputId": "785a8fd4-5c9c-4f76-96e9-4f8fd262ad51"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1628,19 +1628,17 @@
         "\n",
         "# Incorporate the bias term for bp\n",
         "X_bp_b= np.column_stack((np.ones(len(X_bp)),X))\n",
-        "plot_line(X_bp_b, w_bp_cf, Y, \"Blood Pressure\")\n",
-        "\n",
-        "\n"
+        "plot_line(X_bp_b, w_bp_cf, Y, \"Blood Pressure\")\n"
       ],
       "metadata": {
         "id": "pQpuOtSUBEwb",
-        "outputId": "43a9ad00-f501-4980-a6ba-e9ad1d8804fa",
+        "outputId": "634e0f85-d68b-4dc8-c2a2-8040588b99d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 759
         }
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1697,32 +1695,139 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
-        "X = diabetes_data[\"bmi\"]\n",
+        "# BMI\n",
+        "X_bmi = diabetes_data[\"bmi\"].to_frame()\n",
         "Y = diabetes_data[\"DP\"]\n",
         "\n",
-        "X = X.to_frame()\n",
+        "model_bmi = LinearRegression()\n",
+        "model_bmi.fit(X_bmi, Y)\n",
         "\n",
-        "model = LinearRegression()\n",
-        "model.fit(X,Y)\n",
+        "# Extract parameters\n",
+        "sk_w_bmi = model_bmi.coef_[0]\n",
+        "sk_b_bmi = model_bmi.intercept_\n",
         "\n",
-        "print(model.coef_)\n",
-        "print(model.intercept_)"
+        "# Predictions & MSE\n",
+        "Y_pred_bmi = model_bmi.predict(X_bmi)\n",
+        "sk_cost_bmi = mean_squared_error(Y, Y_pred_bmi)\n",
+        "\n",
+        "print(\"BMI using Scikit-learn:\")\n",
+        "print(\"Weight (w1):\", sk_w_bmi)\n",
+        "print(\"Bias (w0):\", sk_b_bmi)\n",
+        "print(\"MSE:\", sk_cost_bmi)\n",
+        "print()"
       ],
       "metadata": {
         "id": "HCGx1T_cLXDv",
-        "outputId": "bf9bc34e-3249-4be7-a144-a6215c1172cf",
+        "outputId": "013eda1f-fd08-4fda-ab12-b0a908c4b5a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[949.43526038]\n",
-            "152.13348416289617\n"
+            "BMI using Scikit-learn:\n",
+            "Weight (w1): 949.4352603840387\n",
+            "Bias (w0): 152.13348416289617\n",
+            "MSE: 3890.456585461273\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Task 3 (continued)\n",
+        "# Blood Pressure\n",
+        "X_bp = diabetes_data[\"bp\"].to_frame()\n",
+        "\n",
+        "model_bp = LinearRegression()\n",
+        "model_bp.fit(X_bp, Y)\n",
+        "\n",
+        "# Extract parameters\n",
+        "sk_w_bp = model_bp.coef_[0]\n",
+        "sk_b_bp = model_bp.intercept_\n",
+        "\n",
+        "# Predictions & MSE\n",
+        "Y_pred_bp = model_bp.predict(X_bp)\n",
+        "sk_cost_bp = mean_squared_error(Y, Y_pred_bp)\n",
+        "\n",
+        "print(\"BP using Scikit-learn:\")\n",
+        "print(\"Weight (w1):\", sk_w_bp)\n",
+        "print(\"Bias (w0):\", sk_b_bp)\n",
+        "print(\"MSE:\", sk_cost_bp)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "rljZQD7nSd4E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "234201ea-d67f-4abe-c56e-ee35e89acd5d"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BP using Scikit-learn:\n",
+            "Weight (w1): 714.7382594960411\n",
+            "Bias (w0): 152.13348416289597\n",
+            "MSE: 4774.113902368687\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Task 3 (continued)\n",
+        "table_md = f\"\"\"\n",
+        "## Comparison of GD, Closed-Form, and Scikit-Learn Results\n",
+        "\n",
+        "| Feature | Method     | Weights (w0, w1)                                       | Cost (MSE) |\n",
+        "|---------|------------|--------------------------------------------------------|------------|\n",
+        "| BMI     | GD         | {w_bmi_gd}                            | {cost_bmi_gd:.4f} |\n",
+        "| BMI     | CF         | {w_bmi_cf}                            | {cost_bmi_cf:.4f} |\n",
+        "| BMI     | Sklearn    | [{sk_b_bmi:.4f}, {sk_w_bmi:.4f}]                                   | {sk_cost_bmi:.4f} |\n",
+        "| BP      | GD         | {w_bp_gd}                            | {cost_bp_gd:.4f} |\n",
+        "| BP      | CF         | {w_bp_cf}                            | {cost_bp_cf:.4f} |\n",
+        "| BP      | Sklearn    | [{sk_b_bp:.4f}, {sk_w_bp:.4f}]                                   | {sk_cost_bp:.4f} |\n",
+        "\"\"\"\n",
+        "\n",
+        "print(table_md)\n"
+      ],
+      "metadata": {
+        "id": "aMa-1UY7SqfZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "38003d3b-35b2-443d-e69c-9f3723ee6d8f"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "## Comparison of GD, Closed-Form, and Scikit-Learn Results\n",
+            "\n",
+            "| Feature | Method     | Weights (w0, w1)                                       | Cost (MSE) |\n",
+            "|---------|------------|--------------------------------------------------------|------------|\n",
+            "| BMI     | GD         | [152.13348416 949.43525905]                            | 3890.4566 |\n",
+            "| BMI     | CF         | [152.13348416 949.43526038]                            | 3890.4566 |\n",
+            "| BMI     | Sklearn    | [152.1335, 949.4353]                                   | 3890.4566 |\n",
+            "| BP      | GD         | [152.13348416 714.73825849]                            | 4774.1139 |\n",
+            "| BP      | CF         | [152.13348416 714.7382595 ]                            | 4774.1139 |\n",
+            "| BP      | Sklearn    | [152.1335, 714.7383]                                   | 4774.1139 |\n",
+            "\n"
           ]
         }
       ]
@@ -1733,31 +1838,9 @@
         "# Task 3 (continued)\n"
       ],
       "metadata": {
-        "id": "rljZQD7nSd4E"
-      },
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Task 3 (continued)\n"
-      ],
-      "metadata": {
-        "id": "aMa-1UY7SqfZ"
-      },
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Task 3 (continued)\n"
-      ],
-      "metadata": {
         "id": "KxxN_H8GSyvH"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1826,13 +1909,13 @@
       ],
       "metadata": {
         "id": "mq7lAniNVUrF",
-        "outputId": "5d1a5c7c-7972-45bc-9f63-2ffb803e5cc7",
+        "outputId": "f64f9938-3ce8-4f4d-9f8c-0dab4de895f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 678
+          "height": 683
         }
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1862,7 +1945,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 22
         }
       ]
     },
@@ -1981,12 +2064,12 @@
       ],
       "metadata": {
         "id": "FsFaDi6JRHL1",
-        "outputId": "ec156e4f-6368-4de3-9df1-bef693b49c47",
+        "outputId": "d08aaf71-c055-482c-9531-eab8cca577df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
